# nunchuk-android-nativesdk

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Dockerfile  README.md  build.gradle  gradle.properties  jitpack.yml  pom.xml  push_code.py  release_note.md  upload.py  upload_aar.py
.claude/: settings.local.json
.claude/commands/: bind-api.md
.claude/skills/release-native-sdk/: SKILL.md
.github/workflows/: ci.yml
configs/: dependencies.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/java/com/nunchuk/android/callbacks/: DownloadFileCallBack.kt  SyncFileCallBack.kt  SyncProgress.kt  UploadFileCallBack.kt
src/main/java/com/nunchuk/android/exception/: BaseException.kt  HWIException.kt  NCNativeException.kt  NunchukException.kt  RPCException.kt  StorageException.kt
src/main/java/com/nunchuk/android/listener/: BalancesListener.kt  BlockListener.kt  GroupDeleteListener.kt  GroupMessageListener.kt  GroupOnlineListener.kt  GroupReplaceListener.kt  GroupSandboxListener.kt  TransactionListener.kt
src/main/java/com/nunchuk/android/model/: Amount.kt  AppSettings.kt  BSMSData.kt  BlockListener.kt  BtcUri.kt  CardStatus.kt  CoinCollection.kt  CoinTag.kt  CoinsGroup.kt  ColdCardHealth.kt  ConnectionStatusExecutor.kt  ConnectionStatusHelper.java  ConnectionStatusHelper.kt  Device.kt  DraftRollOverTransaction.kt  FreeGroupConfig.kt  FreeGroupMessage.kt  FreeGroupWalletConfig.kt  GlobalGroupWalletConfig.kt  GroupDummyTransaction.kt  GroupDummyTransactionPayload.kt  GroupDummyTransactionSignature.kt  (+41 more)
src/main/native/: .install_deps.sh  .install_linux_arm8_deps.sh  .install_linux_deps.sh  CMakeLists.txt  deserializer.cpp  deserializer.h  group-wallet-jni.cpp  initializer-jni.cpp  initializer.cpp  initializer.h  mk4.cpp  modelprovider.cpp  modelprovider.h  nfc.cpp  nfc.h  nunchukprovider.cpp  nunchukprovider.h  room-jni.cpp  room-transaction-jni.cpp  room-wallet-jni.cpp  satscard-jni.cpp  serializer.cpp  serializer.h  signer-jni.cpp  string-wrapper.h  sync-jni.cpp  tap-protocol-jni.cpp  transaction-jni.cpp  util-jni.cpp  wallet-jni.cpp  wallet-shared-jni.cpp
src/main/native/patches/: AddBoostIfNeeded.cmake  FindLibevent.cmake  introspection.cmake  libevent.mk  libnunchuk-CMakeLists.txt  random.cpp
(+57 files in other folders)
